# cli

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  README.md  compose.yml  pyproject.toml
src/jmrec/: main.py  utils.py
src/jmrec/commands/: canvas.py  convert.py  greet.py  monitor.py
