[project]
name = "jmrec-cli"
version = "0.1.0"
description = "A collection of personal utilities for daily work"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer",
    "img2pdf",
    "pypdf",
    "tablib",
    "pypandoc"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
jmrec-cli = "jmrec.main:app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}